  --------------------------  HepMC-2.00.02  --------------------------

2007-02-07 Lynn Garren

	* doc/doxygen-template: provide an html template

2007-01-30 Lynn Garren

	* doc/doxygen.conf: use doxygen 1.5.1

2007-01-30 Lynn Garren

	* examples/example_BuildEventFromScratch.cc: add example of 
	  conversion from SimpleVector to HepLorentzVector
	* examples/VectorConversion.h: VectorConversion.h is meant as a 
	  template for user code converting to the vector of your choice.

2007-01-29 Lynn Garren

	* fix everything so doxygen will create a useful reference manual
	  nearly every file has been touched, but only the comments changed


2007-01-25 Lynn Garren

	* examples/example_MyPythiaRead.cc: read in the events you just wrote
	* examples/*.cc: put all uses of IO_Ascii within an explicit scope

	* configure.in, doc/Makefile.am: if latex is found, get the path

	* test/testHepMC.sh.in: make the diff work for MacOSX

	--------------------  HepMC-02-00-01  ---------------------------------

2007-01-17 Lynn Garren

	* test/testSimpleVector.cc: exercise the vector methods

2007-01-16 Lynn Garren

	* HepMC/SimpleVector.icc: implement ThreeVector::set(x,y,z)

2006-08-23 Lynn Garren

	* install examples in $(prefix)/examples/HepMC
	
	* check for latex and build documents if latex is present

	--------------------  HepMC-02-00-00  ---------------------------------

2006-08-22 Lynn Garren

	* src/IO_ExtendedAscii.cc: read and write generated mass as part of 
	  particle line.

2006-08-18 Lynn Garren

	* doc/HepMC2_user_manual.tex documentation for HepMC 2

2006-08-01 Lynn Garren

	* HepMC/is_arithmetic.h, HepMC/enable_if.h supplied by Walter Brown 
	  for a clean template constructor implementation.

2006-07-23 Lynn Garren

	* HepMC/SimpleVector.h: add a templated constructor for both FourVector
          and ThreeVector that will take any lorentz vector which has the 
          x(), y(), z(), and t() methods.  This should enable existing code 